# lucindra-RoboTech

./: .gitmodules  README.md  felina_map.pgm  felina_map.yaml
install/: .rosinstall  _setup_util.py  setup.sh
install/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
install/include/keyboard_reader/: Key.h
install/include/mouse_reader/: mousemove.h
install/lib/pkgconfig/: beginner_tutorials.pc  keyboard_reader.pc  mouse_reader.pc  my_r2d2.pc  point_visualizer.pc  r2d2_navigator.pc
install/share/mouse_reader/: package.xml
src/beginner_tutorials/: CMakeLists.txt~  package.xml~
src/beginner_tutorials/launch/: turtlemimic.launch~
src/dual_manipulator_support/urdf/: dual.xacro  dual.xacro~  twoDifferent.xacro  twoDifferent.xacro~
src/dual_mixed_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_mixed_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_sia5d.srdf  ompl_planning.yaml
src/dual_sia5d_moveit_config/: .setup_assistant  package.xml
src/motoman_sia5dmoveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/motoman_sia5dmoveit_config/config/: motoman_sia5d.srdf  motoman_sia5d.srdf~
src/motoman_sia5dmoveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  triangle.launch  warehouse.launch
src/motoman_sia5dmoveit_config/src/: triangularpath.cpp
src/mouse_reader/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/mouse_reader/msg/: Mousemove.msg  (+1 more)
src/moveit/: .setup_assistant  package.xml
src/planning_tutorial/: CMakeLists.txt  package.xml
src/planning_tutorial/launch/: moveit_tut.launch
src/planning_tutorial/src/: move_group_interface_tutorial.cpp  notes.cpp
src/playstation/: CMakeLists.txt  package.xml
src/point_visualizer/: CMakeLists.txt  config.rviz
(+56 files in other folders)
