<?xml version="1.0"?>
<package format="2">
  <name>planning_tutorial</name>
  <version>0.0.0</version>
  <description>The planning_tutorial package</description>

  <maintainer email="tudeng@todo.todo">tudeng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
